--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -27,6 +27,15 @@ $background-opacity: 0.4;
   }
 }
 
+// Set text Color
+@function set-text-color($color) {
+  @if (lightness($color) > 40) {
+    @return #000;
+  } @else {
+    @return #fff;
+  }
+}
+
 @mixin easeOut {
   transition: all 0.5s ease-out;
 }
