--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -40,6 +40,18 @@
       height: 150px;
     }
   }
+
+  .about-info {
+    grid-template-areas:
+      "bio"
+      "bio"
+      "bio"
+      "job1"
+      "job2"
+      "job3";
+
+    grid-template-columns: 1fr;
+  }
 }
 // Smartphones
 @include mediaSm {
