--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,5 +1,8 @@
 // Widescreens
 @include mediaXL {
+  .projects {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 // Desktops and Laptops
 @include mediaLg {
@@ -52,10 +55,18 @@
 
     grid-template-columns: 1fr;
   }
+
+  .projects {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 // Smartphones
 @include mediaSm {
   main#home h1 {
     margin-top: 10vh;
+  }
+
+  .projects {
+    grid-template-columns: 1fr;
   }
 }
