--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,8 +1,11 @@
 @import "config";
 @import "menu";
+@import url("https://fonts.googleapis.com/css?family=Playfair+Display&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap");
 
 * {
   box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;
 }
 body {
   @include background;
@@ -10,7 +13,7 @@ body {
   color: set-text-color($primary-color);
   height: 100%;
   margin: 0;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Open Sans", sans-serif;
   line-height: 1.5;
 }
 
@@ -23,6 +26,7 @@ h3 {
 
   &.lg-heading {
     font-size: 6rem;
+    font-family: "Playfair Display", serif;
   }
 
   &.sm-heading {
@@ -83,7 +87,12 @@ main {
     "bio bio bio"
     "job1 job2 job3";
   grid-template-columns: repeat(3, 1fr);
-
+  .bio-image {
+    grid-area: bioimage;
+    margin: auto;
+    border-radius: 50%;
+    border: $secondary-color 3px solid;
+  }
   .bio {
     grid-area: bio;
     font-size: 1.5rem;
@@ -97,6 +106,11 @@ main {
   }
   .job-3 {
     grid-area: job3;
+  }
+  .job {
+    background: lighten($primary-color, 5);
+    padding: 0.5rem;
+    border-bottom: $secondary-color 5px solid;
   }
 }
 
@@ -114,6 +128,32 @@ main {
       opacity: 0.5;
       border-color: $secondary-color;
       @include easeOut;
+    }
+  }
+}
+
+// Contact Page
+.boxes {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 1rem;
+
+  div {
+    font-size: 2rem;
+    border: 3px #fff solid;
+    padding: 1.5rem 2.5rem;
+    margin-bottom: 3rem;
+    @include easeOut;
+
+    &:hover {
+      padding: 0.5rem 1.5rem;
+      background: $secondary-color;
+      color: set-text-color($secondary-color);
+      span {
+        color: set-text-color($secondary-color);
+      }
     }
   }
 }
