--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -2,7 +2,7 @@ $primary-color: #444;
 $secondary-color: #eece1a;
 $show-home-image: true;
 $home-image: url(../img/background.jpg);
-$portrait-image: url(../img/portrait.JPG);
+$portrait-image: url(../img/portrait2.jpg);
 $background-opacity: 0.4;
 
 @mixin background {
