--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,11 +1,33 @@
 // Widescreens
 @include mediaXL {
+  .reason-info {
+    grid-template-areas:
+      "bio"
+      "bio"
+      "bio"
+      "reason1"
+      "reason2"
+      "reason3";
+
+    grid-template-columns: 1fr;
+  }
   .projects {
     grid-template-columns: repeat(4, 1fr);
   }
 }
 // Desktops and Laptops
 @include mediaLg {
+  .reason-info {
+    grid-template-areas:
+      "bio"
+      "bio"
+      "bio"
+      "reason1"
+      "reason2"
+      "reason3";
+
+    grid-template-columns: 1fr;
+  }
 }
 // Tablets and Small Laptops
 @include mediaMd {
@@ -55,6 +77,17 @@
 
     grid-template-columns: 1fr;
   }
+  .reason-info {
+    grid-template-areas:
+      "bio"
+      "bio"
+      "bio"
+      "reason1"
+      "reason2"
+      "reason3";
+
+    grid-template-columns: 1fr;
+  }
 
   .projects {
     grid-template-columns: repeat(2, 1fr);
@@ -64,12 +97,15 @@
 @include mediaSm {
   main {
     padding: 2rem;
-    main#home h1 {
+    #home h1 {
       margin-top: 10vh;
     }
-    lg-heading {
+    .lg-heading {
       margin-top: 1rem;
       font-size: 5rem;
+    }
+    .contact-info {
+      font-size: 1.5rem;
     }
   }
 
